--- a/ProyectoIntegrador_IbanezCarlos/angular.json
+++ b/ProyectoIntegrador_IbanezCarlos/angular.json
@@ -90,12 +90,18 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "ProyectoIntegrador_IbanezCarlos/node_modules/bootstrap/dist/css/bootstrap.css"
             ],
-            "scripts": []
+            "scripts": [
+              "ProyectoIntegrador_IbanezCarlos/node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "1a958164-79c2-43bd-bb58-15176009ef26"
   }
 }
